# django-playground

./: manage.py  pyproject.toml
core/: api.py  asgi.py  schema.py  settings.py  urls.py  wsgi.py
crud_api/: api.py  models.py  schema.py  serializers.py  urls.py  views.py
crud_api/migrations/: 0001_initial.py
movie_api/: admin.py  api.py  apps.py  asgi.py  models.py  schema.py  settings.py  urls.py  wsgi.py
movie_api/migrations/: 0001_initial.py
review_api/: admin.py  api.py  apps.py  models.py  schema.py  urls.py  views.py
review_api/migrations/: 0001_initial.py
